--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
                             </div>
                             <div class="content__gender-radio">
                                 <div class="content__gender-radiobtn">
-                                    <input type="radio" value="Nam" name="gender">
+                                    <input type="radio" value="MALE" name="gender">
                                     <span>Made</span>
                                 </div>
                                 <div class="content__gender-radiobtn">
-                                    <input type="radio" value="Nữ" name="gender">
+                                    <input type="radio" value="FEMALE" name="gender">
                                     <span>Female</span>
                                 </div>
                                 <div class="content__gender-radiobtn">
-                                    <input type="radio" value="Khác" name="gender">
+                                    <input type="radio" value="OTHER" name="gender">
                                     <span>
                                         Other</span>
                                 </div>
@@ -118,6 +118,7 @@
                         <i class="fas fa-caret-down"></i>
                     </a>
                     <div class="total">Total:<span></span></div>
+                    <div class="clear__all">ClearALL <i class="fas fa-broom"></i></div>
                     <div class="content__list">
                         <div class="content__container">
                             <!-- <div class="content__list-item">
